--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
     environment:
       BUNDLE_JOBS: "4"
       BUNDLE_RETRY: "3"
-      MYSQL_HOST: 127.0.0.1
+      MYSQL_HOST: db
       MYSQL_ROOT_PASSWORD: password
       RAILS_ENV: test
     steps:
