modify mysql authentication command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       RAILS_ENV: test
     steps:
       - setup
-      - run: --default-authentication-plugin=mysql_native_password
+      - run: mysqld --default-authentication-plugin=mysql_native_password
       - run:
           name: rails db:migrate
           command: bundle exec rails db:migrate
