--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ jobs:
           name: install mysql-client
           command: sudo apt-get install default-mysql-client
       - run:
+          name: rails db:create
+          command: bundle exec rails db:create
+      - run:
           name: rails db:migrate
           command: bundle exec rails db:migrate
       - run:
