--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ jobs:
     docker:
       - image: cimg/ruby:2.7-node
       - image: circleci/mysql:8-ram
+        name: "db"
         command: mysqld --default-authentication-plugin=mysql_native_password
         environment:
-          MYSQL_DB: myapp_test
           MYSQL_ROOT_PASSWORD: password
     environment:
       BUNDLE_JOBS: "4"
