--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,8 @@ jobs:
       - image: circleci/mysql:8-ram
         name: "db"
         command: mysqld --default-authentication-plugin=mysql_native_password
+        environment:
+          MYSQL_ROOT_PASSWORD: password
     environment:
       BUNDLE_JOBS: "4"
       BUNDLE_RETRY: "3"
@@ -41,9 +43,6 @@ jobs:
       - run:
           name: rails db:create
           command: bundle exec rails db:create
-      - run:
-          name: rails db:migrate
-          command: bundle exec rails db:migrate
       - run:
           name: Database setup
           command: bundle exec rails db:schema:load --trace
